# HoshenKopelmanAlgorithm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Readme.md  build_command.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
src/: alghoritm.h  hoshen_kopelman_lattice.cpp  utils.h
src/ClustersCalculate/: clusters_calculate.cpp  clusters_calculate.h
src/ComputePercolation/: compute_percolation.cpp  compute_percolation.h
src/ObjectsSystem/: Objects.cpp  Objects.h
src/PercolationSystem/: percolation_system.cpp  percolation_system.h
